cambios multifliar y comercial

--- a/21a-city-bell.html
+++ b/21a-city-bell.html
@@ -72,31 +72,26 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="arq-multifamiliar.html"><img src="img/arrow-left.png"/></a> 21a City Bell<br/>          
           </h4>
-          <img class="w-100" src="img/21a-city-bell/PORTADA.jpeg"/>
+          <img class="banner-img img-fluid w-100" src="img/21a-city-bell/PORTADA.jpeg"/>
         </div>
       </div>
-      <section class="proyect-grid container-fluid px-0 mt-5">
-        <div class="row g-0 mb-1 px-0">          
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/21a-city-bell/21a-city-bell-001.jpeg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/21a-city-bell/21a-city-bell-002.jpeg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/21a-city-bell/21a-city-bell-003.jpeg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/21a-city-bell/21a-city-bell-004.jpeg');">              
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
   </main>
+    <section class="ontainer-fluid  mt-5">
+    <div class="row g-5">          
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+        <div class="m-4">
+          <img src="img/21a-city-bell/21a-city-bell-001.jpeg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/21a-city-bell/21a-city-bell-002.jpeg" class="img-fluid" alt="">
+        </div>
+                 <div class="m-4">
+          <img src="img/21a-city-bell/21a-city-bell-004.jpeg" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- FOOTER -->
   <footer class="container">
     <div class="row">
