--- a/arq-comercial.html
+++ b/arq-comercial.html
@@ -86,7 +86,7 @@
       </div>
       <div class="col-12 col-md-3">
         <a href="nizuc-house.html" class="d-block">
-          <div class="grid-item" style="background-image: url('img/nizuc-house/Exterior\ 1.jpg');">
+          <div class="grid-item" style="background-image: url('img/nizuc-house/1. PORTADA TARJETA.png');">
             <div class="title">
               <h6>
                 Nizuc <br />
