--- a/nizuc-house.html
+++ b/nizuc-house.html
@@ -72,7 +72,7 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="arq-comercial.html"><img src="img/arrow-left.png"/></a> Nizuc House<br/>          
           </h4>
-          <img class="w-100" src="img/nizuc-house/Exterior 1.jpg"/>
+          <img class="banner-img img-fluid  w-100" src="img/nizuc-house/Exterior 2.jpg" />
         </div>
       </div>
       <div class="container-fluid">
@@ -92,28 +92,43 @@
           </div>
         </div>
       </div>
-      <section class="proyect-grid container-fluid px-0 mt-5">
-        <div class="row g-0 mb-1 px-0">          
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/nizuc-house/Exterior 2.jpg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/nizuc-house/Exterior 5.jpg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/nizuc-house/Interior\ a\ \(1\).jpg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/nizuc-house/Interior\ a\ \(2\).jpg');">              
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
   </main>
+    <section class="ontainer-fluid  mt-5">
+    <div class="row g-5">          
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+        <div class="m-4">
+          <img src="img/nizuc-house/Exterior 1.jpg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/nizuc-house/Exterior 5.jpg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/nizuc-house/Interior a (1).jpg" class="img-fluid" alt="">
+        </div>
+                 <div class="m-4">
+          <img src="img/nizuc-house/Interior a (2).jpg" class="img-fluid" alt="">
+        </div>              
+        <div class="col-12 d-flex justify-content-center align-items-center ">
+
+        <div class="col-6 d-flex justify-content-center align-items-center ">
+                         <div class="m-4">
+          <img src="img/nizuc-house/WhatsApp Image 2023-12-27 at 10.38.41 (1).jpeg" class="img-fluid img-description" alt="">
+        </div>
+        </div>
+
+                <div class="col-6 d-flex justify-content-center align-items-center">
+                         <div class="m-4">
+          <img src="img/nizuc-house/WhatsApp Image 2023-12-27 at 10.38.41.jpeg" class="img-fluid img-description " alt="">
+        </div>
+        </div>
+        </div>
+                 <div class="m-4">
+          <img src="img/nizuc-house/WhatsApp Image 2023-12-27 at 10.38.jpg" class="img-fluid img-description "  alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- FOOTER -->
   <footer class="container">
     <div class="row">
