--- a/club-house-el-cazal.html
+++ b/club-house-el-cazal.html
@@ -72,31 +72,31 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="arq-comercial.html"><img src="img/arrow-left.png"/></a> Club House El Cazal<br/>          
           </h4>
-          <img class="w-100" src="img/club-house-el-cazal/PORTADA.jpeg"/>
+          <img class="banner-img img-fluid w-100" src="img/club-house-el-cazal/PORTADA.jpeg"/>
         </div>
       </div>
-      <section class="proyect-grid container-fluid px-0 mt-5">
-        <div class="row g-0 mb-1 px-0">          
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/club-house-el-cazal/WhatsApp\ Image\ 2024-01-30\ at\ 15.13.13.jpeg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/club-house-el-cazal/WhatsApp\ Image\ 2024-01-30\ at\ 15.13.14.jpeg');">              
-            </div>
-          </div> 
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/club-house-el-cazal/WhatsApp\ Image\ 2024-01-30\ at\ 15.13.15.jpeg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/club-house-el-cazal/WhatsApp\ Image\ 2024-01-30\ at\ 15.13.17.jpeg');">              
-            </div>
-          </div>          
-        </div>
-      </section>
     </div>
   </main>
+    <section class="ontainer-fluid  mt-5">
+    <div class="row g-5">          
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+         <div class="m-4">
+          <img src="img/club-house-el-cazal/WhatsApp Image 2024-01-30 at 15.13.15.jpeg" class="img-fluid img-description" alt="">
+        </div>
+        <div class="col-12 d-flex">
+                         <div class="m-4">
+          <img src="img/club-house-el-cazal/WhatsApp Image 2024-01-30 at 15.13.19.jpeg" class="img-fluid img-description">
+        </div>
+                         <div class="m-4">
+          <img src="img/club-house-el-cazal/WhatsApp Image 2024-01-30 at 15.13.20.jpeg" class="img-fluid img-description" alt="">
+        </div></div>
+                         <div class="m-4">
+          <img src="img/club-house-el-cazal/WhatsApp Image 2024-01-30 at 15.13.21.jpeg" class="img-fluid img-description" alt="">
+        </div>
+      </div>
+      </div>
+   
+  </section>
   <!-- FOOTER -->
   <footer class="container">
     <div class="row">
