--- a/club-house-lemu.html
+++ b/club-house-lemu.html
@@ -72,23 +72,23 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="arq-comercial.html"><img src="img/arrow-left.png"/></a> Club House Lemu<br/>          
           </h4>
-          <img class="w-100" src="img/club-house-lemu/PORTADA.jpg"/>
+          <img class="banner-img img-fluid w-100" src="img/club-house-lemu/PORTADA.jpg"/>
         </div>
       </div>
-      <section class="proyect-grid container-fluid px-0 mt-5">
-        <div class="row g-0 mb-1 px-0">          
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/club-house-lemu/01.jpg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/club-house-lemu/02.jpg');">              
-            </div>
-          </div>          
-        </div>
-      </section>
     </div>
   </main>
+    <section class="ontainer-fluid  mt-5">
+    <div class="row g-5">          
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+        <div class="m-4">
+          <img src="img/club-house-lemu/01.jpg" class="img-fluid img-description" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/club-house-lemu/02.jpg" class="img-fluid img-description" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- FOOTER -->
   <footer class="container">
     <div class="row">
