--- a/naudir-delta.html
+++ b/naudir-delta.html
@@ -72,7 +72,7 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="arq-comercial.html"><img src="img/arrow-left.png"/></a> Naudir Delta<br/>          
           </h4>
-          <img class="w-100" src="img/naudir-delta/house naudir delta-01.jpg"/>
+          <img class="banner-img img-fluid w-100" src="img/naudir-delta/house naudir delta-01.jpg"/>
         </div>
       </div>
       <div class="container-fluid">
@@ -92,28 +92,29 @@
           </div>
         </div>
       </div>
-      <section class="proyect-grid container-fluid px-0 mt-5">
-        <div class="row g-0 mb-1 px-0">          
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/naudir-delta/house\ naudir\ delta-02.jpg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/naudir-delta/house\ naudir\ delta-03.jpg');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/naudir-delta/house\ naudir\ delta-04.png');">              
-            </div>
-          </div>
-          <div class="col-12 col-md">
-            <div class="grid-item" style="background-image: url('img/naudir-delta/house\ naudir\ delta-05.jpg');">              
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
   </main>
+    <section class="ontainer-fluid  mt-5">
+    <div class="row g-5">          
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+        <div class="m-4">
+          <img src="img/naudir-delta/house naudir delta-02.jpg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/naudir-delta/house naudir delta-03.jpg" class="img-fluid" alt="">
+        </div>
+         <div class="m-4">
+          <img src="img/naudir-delta/house naudir delta-04.png" class="img-fluid" alt="">
+        </div>
+                 <div class="m-4">
+          <img src="img/naudir-delta/house naudir delta-05.jpg" class="img-fluid" alt="">
+        </div>
+                         <div class="m-4">
+          <img src="img/naudir-delta/house naudir delta-06.png" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- FOOTER -->
   <footer class="container">
     <div class="row">
