correccion grillas, marge info,y contact footer

--- a/21a-city-bell.html
+++ b/21a-city-bell.html
@@ -77,17 +77,19 @@
       </div>
     </div>
   </main>
-    <section class="ontainer-fluid  mt-5">
+    <section class="ontainer-fluid  mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+        <div class="col-12 d-flex justify-content-center align-items-center ">
         <div class="m-4">
-          <img src="img/21a-city-bell/21a-city-bell-001.jpeg" class="img-fluid" alt="">
+          <img src="img/21a-city-bell/21a-city-bell-001.jpeg" class="img-fluid img-description" alt="">
         </div>
+        <div class="m-4">
+ <img src="img/21a-city-bell/21a-city-bell-004.jpeg" class="img-fluid img-description alt="">
+</div>
+</div>
          <div class="m-4">
           <img src="img/21a-city-bell/21a-city-bell-002.jpeg" class="img-fluid" alt="">
-        </div>
-                 <div class="m-4">
-          <img src="img/21a-city-bell/21a-city-bell-004.jpeg" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -109,7 +111,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
