--- a/carilo-golf.html
+++ b/carilo-golf.html
@@ -78,7 +78,7 @@
       </div>
       <div class="container-fluid">
         <div class="row">
-          <h5 class="col-12">Carilo golf</h5>
+          <h5 class="col-12 ps-5">Carilo golf</h5>
         <!-- <div class="col-12 col-sm-6 col-lg-8">
           <p class="proyect-descrition">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel egestas dolor, nec dignissim metus. Donec augue elit, rhoncus ac sodales id, porttitor vitae est. Donec laoreet rutrum libero sed pharetra.
@@ -86,7 +86,7 @@
             Donec vel egestas dolor, nec dignissim metus. Donec augue elit, rhoncus ac sodales id, porttitor vitae est. Donec laoreet rutrum libero sed pharetra. Duis a arcu convallis, gravida purus eget, mollis diam.
           </p>
         </div> -->
-            <div class="col-12 col-sm-6 col-lg-4">
+            <div class="col-12 col-sm-6 col-lg-4 ps-5">
               <p class="technic-info">
                 <strong>_Localidad:</strong> Cariló<br />
                 <strong>_Año:</strong> 2021<br />
@@ -99,24 +99,17 @@
 
     </div>
   </main>
-         <section class=" container-fluid mt-5">
-        <div class="row g-2">
-<div class="col-6 d-flex flex-column align-items-center justify-content-center">
-  <div class="m-4  ">
-    <img src="img/carilo-golf/DJI_0879.JPG" class="img-fluid w-100" alt="">
-  </div>
+         <section class=" container-fluid mt-4">
+        <div class="row g-5">
+<div class="col-12 d-flex  align-items-center justify-content-center">
     <div class="m-4  ">
     <img src="img/carilo-golf/DJI_0898.JPG" class="img-fluid w-100" alt="">
-  </div>
-  </div>
-  <div class="col-6 d-flex flex-column align-items-center justify-content-center">
-  <div class="m-4 ">
-    <img src="img/carilo-golf/DJI_0905.JPG" class="img-fluid" alt="">
   </div>
     <div class="m-4 ">
     <img src="img/carilo-golf/DJI_0918.JPG" class="img-fluid" alt="">
   </div>
-</div>
+  </div>
+
 
   <div class="col-6 d-flex flex-column align-items-center justify-content-center">
   <div class="m-4 ">
@@ -174,7 +167,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
