--- a/el-campo.html
+++ b/el-campo.html
@@ -72,15 +72,15 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="proyectos.html"><img src="img/arrow-left.png"/></a> El Campo<br/>          
           </h4>
-          <img class="banner-img img-fluid w-100" src="img/el-campo/PORTADA.24.jpg"/>
+          <img class="banner-img img-fluid  w-100" src="img/el-campo/PORTADA.24.jpg"/>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             El Campo
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Campana – BS AS<br />
               <strong>_Tamaño del predio:</strong> 87 ha<br />
@@ -95,10 +95,10 @@
   </main>      
   
   <section class="container-fluid px-0 mt-5">
-        <div class="row g-5"> 
-          <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-            <div class="m-2">
-<img src="img/el-campo/EL CAMPO imagen satelital 31.01.24.jpg" class="img-fluid  w-100" alt="">            
+        <div class="row g-2"> 
+          <div class="col-12 d-flex justify-content-center align-items-center">
+            <div class="col-12 ">
+<img src="img/el-campo/EL CAMPO imagen satelital 31.01.24.jpg" class="img-fluid  img-description" alt="">            
 </div>
 
           </div>          
@@ -122,7 +122,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
