--- a/el-cazal.html
+++ b/el-cazal.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             El Cazal
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Escobar – BS AS<br />
               <strong>_Tamaño del predio:</strong> 70 ha<br />
@@ -92,34 +92,32 @@
       </div>.
         </div>
   </main>
-      <section class="container-fluid  mt-5">
+      <section class="container-fluid  mt-4">
         <div class="row g-5"> 
           <div class="col-6 d-flex flex-column justify-content-start align-items-center">
-            <div class="m-4">
-<img src="img/el-cazal/el cazal 1.jpg" class="img-fluid" alt="">            
+            <div class="col-12 p-4">
+<img src="img/el-cazal/el cazal 1.jpg" class="img-fluid img-description" alt="">            
           </div>          
-          <div class="m-4">
-<img src="img/el-cazal/el cazal 4.jpg" class="img-fluid " alt="">            
+          <div class="col-12 p-4">
+<img src="img/el-cazal/el cazal 4.jpg" class="img-fluid img-description" alt="">            
             </div>
          
 
-          <div class="m-4">
-<img src="img/el-cazal/el cazal 3.jpg" class="img-fluid" alt=""> 
+          <div class="col-12 p-4">
+<img src="img/el-cazal/el cazal 3.jpg" class="img-fluid img-description" alt=""> 
 </div> 
 </div>
             <div class="col-6 d-flex flex-column justify-content-center align-items-center">
 
-          <div class="m-4">
-            <img src="img/el-cazal/el cazal 2 31.01.jpg" class="img-fluid" alt="">   
+          <div class="col-12 p-4">
+            <img src="img/el-cazal/el cazal 2 31.01.jpg" class="img-fluid img-description alt="">   
 
           </div>
           
  
-                    <div class="m-4">
-<img src="img/el-cazal/1601791973790.jpeg" class="img-fluid" alt="">         
-          </div>
-                              <div class="m-4">
-<img src="img/el-cazal/1598697014421.jpeg" class="img-fluid" alt="">             
+
+                              <div class="col-12 p-4">
+<img src="img/el-cazal/1598697014421.jpeg" class="img-fluid img-description" alt="">             
         </div>
         </div>
       </section>
@@ -141,7 +139,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
