--- a/frente-nizuc.html
+++ b/frente-nizuc.html
@@ -72,15 +72,15 @@
           <h4 class="position-absolute top-0 left-0 ps-5 pt-5 w-100">
             <a href="proyectos.html"><img src="img/arrow-left.png"/></a> Frente Lineal Nizuc<br/>          
           </h4>
-          <img class="banner-img img-fluid w-100" src="img/frente-nizuc/1. PORTADA.png"/>
+          <img class="banner-img img-fluid w-100" src="img/frente-nizuc/Render 8.jpg"/>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Frente Lineal Nizuc
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Hudson – BS AS<br />
               <strong>_Tamaño del predio:</strong> 1,7 ha<br />
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <section class="container-fluid  mt-5">
+      <section class="container-fluid  mt-4">
         <div class="row g-5"> 
           <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <div class="m-4">
@@ -124,7 +124,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacts.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
