--- a/laguna-garzon.html
+++ b/laguna-garzon.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Laguna Garzón
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Departamento de Rocha - Uruguay<br />
               <strong>_Tipología:</strong> Barrio de playa unifamiliar<br />
@@ -91,14 +91,14 @@
       </div>
     </div>
   </main>
-      <section class="container-fluid  mt-5">
+      <section class="container-fluid  mt-4">
         <div class="row g-5"> 
           <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-            <div class="m-4">
-              <img class="img-fluid" src="img/laguna-garzon/WhatsApp Image 2024-01-30 at 14.59.15.jpeg"/>
+            <div class="col-12 p-4">
+              <img class="img-fluid img-description" src="img/laguna-garzon/WhatsApp Image 2024-01-30 at 14.59.15.jpeg"/>
             </div>
-              <div class="m-4">
-              <img class="img-fluid" src="img/laguna-garzon/WhatsApp Image 2024-01-30 at 14.59.14.jpeg"/>
+              <div class="col-12 p-4">
+              <img class="img-fluid img-description" src="img/laguna-garzon/WhatsApp Image 2024-01-30 at 14.59.14.jpeg"/>
             </div>
           </div>
           </div>
@@ -121,7 +121,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
