--- a/lemu.html
+++ b/lemu.html
@@ -75,12 +75,12 @@
           <img class="banner-img img-fluid w-100" src="img/lemu/1. PORTADA .jpg"/>
         </div>
       </div>
-      <div class="container-fluid">
-        <div class="row g-5">
-          <h5 class="col-12">
+      <div class="container-fluid ">
+        <div class="row g-5 ">
+          <h5 class="col-12 ps-5">
             Lemu
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ms-4">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Villa Gesell – BS AS<br />
               <strong>_Tamaño del predio:</strong> 10 ha<br />
@@ -92,13 +92,13 @@
       </div>
 </div>
   </main>
-      <section class="container-fluid mt-5 ">
+      <section class="container-fluid mt-4 px-3">
       <div class="row ">
         <div class="col-12 "> 
           <div class="row  g-5 " >
-              <div class="col-12 ">
+              <div class="col-12 p-4">
             
-              <img src="img/lemu/03-10 FINAL Comercial Lemu.jpg" class="img-fluid w-100  " alt="">               
+              <img src="img/lemu/03-10 FINAL Comercial Lemu.jpg" class="img-fluid w-100 img-description  " alt="">               
             
           </div>
                       <div class="col-12 col-md-6 col-lg-6  flex flex-column align-items-center justify-content-center ">
@@ -149,7 +149,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
