--- a/naudir-239.html
+++ b/naudir-239.html
@@ -104,8 +104,8 @@
         </div>
         <div class="container-fluid">
           <div class="row g-5">
-            <h5 class="col-12">Naudir 239</h5>
-            <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+            <h5 class="col-12 ps-5">Naudir 239</h5>
+            <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
               <p class="technic-info">
                 <strong>_Lote:</strong> 223<br />
                 <strong>_Barrio:</strong> El Naudir Aguas Privadas<br />
@@ -120,7 +120,7 @@
         </div>
       </div>
     </main>
-    <section class="ontainer-fluid mt-5">
+    <section class="ontainer-fluid mt-4">
       <div class="row g-5">
         <div
           class="col-12 d-flex flex-column justify-content-center align-items-center">
@@ -171,7 +171,7 @@
                   <a class="nav-link" href="proyectos.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
+                  <a class="nav-link" href="contact.html">Contacto</a>
                 </li>
               </ul>
             </div>
