--- a/naudir-764.html
+++ b/naudir-764.html
@@ -77,10 +77,10 @@
       </div>        
 <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
-            Costa Delta
+          <h5 class="col-12 ps-5">
+          Naudir 764
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ms-3">
             <p class="technic-info">              
               <strong>_Lote:</strong> 764<br />
             <strong>_Barrio:</strong> El Naudir<br />
@@ -93,13 +93,13 @@
       </div>
       </div>
   </main>
-      <div class="row g-5">          
+      <div class="row g-4">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-        <div class="m-4">
-          <img src="img/naudir-764/02.jpg" class="img-fluid" alt="">
+        <div class="col-12 p-4">
+          <img src="img/naudir-764/02.jpg" class="img-fluid img-description alt="">
         </div>
-         <div class="m-4">
-          <img src="img/naudir-764/02.jpg" class="img-fluid" alt="">
+         <div class="col-12 p-4">
+          <img src="img/naudir-764/02.jpg" class="img-fluid img-description alt="">
         </div>
       </div>
     </div>
@@ -121,7 +121,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
