--- a/praderas-san-lorenzo.html
+++ b/praderas-san-lorenzo.html
@@ -75,12 +75,12 @@
           <img class="banner-img img-fluid w-100" src="img/praderas-san-lorenzo/PORTADA.jpeg"/>
         </div>
       </div>
-      <div class="container-fluid">
+      <div class="container-fluid ">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Praderas San Lorenzo
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Lote:</strong> Lote 32<br />
               <strong>_Barrio:</strong> Praderas- San lorenzo<br />
@@ -95,17 +95,17 @@
     </div>
   </main>
 
-    <section class="ontainer-fluid  mt-5">
+    <section class="ontainer-fluid  mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-        <div class="m-4">
-          <img src="img/praderas-san-lorenzo/WhatsApp Image 2023-08-07 at 12.56.59 (1).jpeg" class="img-fluid vh-100 w-100" alt="">
+        <div class="col-12 p-4">
+          <img src="img/praderas-san-lorenzo/WhatsApp Image 2023-08-07 at 12.56.59 (1).jpeg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/praderas-san-lorenzo/WhatsApp Image 2023-08-07 at 12.56.59 (2).jpeg" class="img-fluid vh-100" alt="">
+         <div class="col-12 p-4">
+          <img src="img/praderas-san-lorenzo/WhatsApp Image 2023-08-07 at 12.56.59 (2).jpeg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/praderas-san-lorenzo/WhatsApp Image 2023-08-07 at 12.57.00.jpeg" class="img-fluid vh-100" alt="">
+         <div class="col-12 p-4">
+          <img src="img/praderas-san-lorenzo/WhatsApp Image 2023-08-07 at 12.57.00.jpeg" class="img-fluid img-description" alt="">
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
