--- a/barcelona.html
+++ b/barcelona.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Gualba
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Barcelona – España<br />
               <strong>_Tamaño del predio:</strong> 8 ha<br />
@@ -92,20 +92,20 @@
 
     </div>
   </main>
-        <section class=" container-fluid mt-5">
+        <section class=" container-fluid mt-4">
         <div class="row g-5 "> 
           <div class="col-12  d-flex flex-column align-items-center justify-content-center">
-            <div class="m-4">
-<img src="img/barcelona/4.jpg" class="img-fluid" alt="">            
+            <div class="col-12 p-4">
+<img src="img/barcelona/4.jpg" class="img-fluid img-description" alt="">            
           </div>    
-          <div class="m-4">
-<img src="img/barcelona/31.4.jpg" class="img-fluid" alt="">            
+          <div class="col-12 p-4">
+<img src="img/barcelona/31.4.jpg" class="img-fluid img-description" alt="">            
           </div>  
-          <div class="m-4">
-<img src="img/barcelona/42.jpg" class="img-fluid" alt="">            
+          <div class="col-12 p-4">
+<img src="img/barcelona/42.jpg" class="img-fluid img-description" alt="">            
           </div>    
-          <div class="m-4">
-<img src="img/barcelona/A1.jpg" class="img-fluid" alt="">            
+          <div class="col-12 p-4">
+<img src="img/barcelona/A1.jpg" class="img-fluid img-description" alt="">            
           </div>  
         </div>
 
@@ -127,7 +127,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
