--- a/carilo-bn.html
+++ b/carilo-bn.html
@@ -107,10 +107,10 @@
     </main>
 
     <section class="container-fluid mt-5">
-      <div class="row g-5">
+      <div class="row g-4">
         <div
           class="col-6 d-flex flex-column justify-content-center align-items-center">
-          <div class="m-4">
+          <div class="m-4 ms-5">
             <img
               src="img/carilo-bn/IMG-20161125-WA0023.jpg"
               class="w-100 img-fluid banner-img"
@@ -119,7 +119,7 @@
           </div>
           <div
           class="col-6 d-flex flex-column justify-content-center align-items-center">
-          <div class="m-4">
+          <div class="m-4 me-5">
             <img
               src="img/carilo-bn/IMG-20161125-WA0017.jpg"
               class="img-fluid w-100"
@@ -157,7 +157,7 @@
                   <a class="nav-link" href="proyectos.html">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
+                  <a class="nav-link" href="contact.html">Contacto</a>
                 </li>
               </ul>
             </div>
