--- a/costa-esmeralda.html
+++ b/costa-esmeralda.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Costa Esmeralda
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Lote:</strong> 115<br />
               <strong>_Barrio:</strong> Costa Esmeralda<br />
@@ -95,7 +95,7 @@
     </div>
   </main>
 
-    <section class="ontainer-fluid  mt-5">
+    <section class="ontainer-fluid  mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
         <div class="m-4">
@@ -124,7 +124,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
