--- a/isla-victoria.html
+++ b/isla-victoria.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Isla Victoria
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Villa Paranacito – Entre Ríos<br />
               <strong>_Tamaño del predio:</strong> 30 ha<br />
@@ -94,17 +94,17 @@
     </div>
   </main>   
   
-  <section class="container-fluid  mt-5">
+  <section class="container-fluid  mt-4">
         <div class="row g-5"> 
           <div class="col-12 d-flex flex-column justify-content-center align-items-center ">
-            <div class="m-4">
-<img src="img/isla-victoria/aerea.jpg" class="img-fluid" alt="">            
+            <div class="col-12 p-4">
+<img src="img/isla-victoria/aerea.jpg" class="img-fluid img-description" alt="">            
           </div>
-          <div class=" m-4">
-<img src="img/isla-victoria/isla victoria renders_3 - Foto.jpg" class="img-fluid" alt="">  
+          <div class="col-12 p-4">
+<img src="img/isla-victoria/isla victoria renders_3 - Foto.jpg" class="img-fluid img-description alt="">  
 </div>
-          <div class=" m-4">
-<img src="img/isla-victoria/PORTADA.jpg" class="img-fluid vh-100 " alt="">  
+          <div class=" col-12 p-4">
+<img src="img/isla-victoria/PORTADA.jpg" class="img-fluid img-description " alt="">  
 </div>          
 </div>
           </div>
@@ -127,7 +127,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
