--- a/lemu-t1.html
+++ b/lemu-t1.html
@@ -80,14 +80,14 @@
     <section class="ontainer-fluid  mt-5">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-        <div class="m-4">
-          <img src="img/lemu-t1/1.jpg" class="img-fluid" alt="">
+        <div class="col-12 p-4">
+          <img src="img/lemu-t1/1.jpg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/lemu-t1/3.jpg" class="img-fluid" alt="">
+         <div class="col-12 p-4">
+          <img src="img/lemu-t1/3.jpg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/lemu-t1/4.jpg" class="img-fluid" alt="">
+         <div class="col-12 p-4">
+          <img src="img/lemu-t1/4.jpg" class="img-fluid img-description " alt="">
         </div>
       </div>
     </div>
