--- a/naudir-1-2.html
+++ b/naudir-1-2.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Naudir I y II
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ms-4">
             <p class="technic-info">
               <strong>_Ubicación:</strong> Escobar - BS AS<br />
               <strong>_Tamaño del predio:</strong> 135 ha<br />
@@ -92,23 +92,23 @@
       </div>
     </div>
   </main>
-    <section class="container-fluid mt-5">
+    <section class="container-fluid mt-4">
         <div class="row g-5">          
           <div class="col-12 col-md-6 col-lg-6 d-flex  justify-content-center align-items-center">
-          <div class="m-4">
-            <img src="img/naudir-I-II/1599059628886.jpeg" class="img-fluid " alt="">
+          <div class="col-12 ps-4">
+            <img src="img/naudir-I-II/1599059628886.jpeg" class="img-fluid img-description" alt="">
           </div>
           </div>
                     <div class="col-12 col-md-6 col-lg-6 d-flex  justify-content-center align-items-center">
 
-          <div class="m-4">
-            <img src="img/naudir-I-II/1601802048491.jpg" class="img-fluid" alt="">
+          <div class="col-12 pe-4">
+            <img src="img/naudir-I-II/1601802048491.jpg" class="img-fluid img-description" alt="">
           </div>
           </div>
                     <div class="col-12  d-flex  justify-content-center align-items-center">
 
-          <div class="m-4">
-              <img src="img/naudir-I-II/01 el naudir 2.JPG" class="img-fluid vh-100" alt="">
+          <div class="col12 p-2">
+              <img src="img/naudir-I-II/01 el naudir 2.JPG" class="img-fluid img-description" alt="">
             </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
