--- a/naudir-251.html
+++ b/naudir-251.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Naudir 251
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Localidad:</strong> Escobar<br />
               <strong>_Año:</strong> 2021<br />
@@ -92,32 +92,35 @@
       </div>
     </div>
   </main>
-    <section class="ontainer-fluid  mt-5">
+    <section class="ontainer-fluid  mt-4">
     <div class="row g-5">        
                             <div class="col-12 d-flex flex-column  justify-content-center align-items-center">
-                         <div class="m-4">
-          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.41.jpeg" class="img-fluid" alt="">
+                         <div class="col-12 p-4">
+          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.41.jpeg" class="img-fluid img-description" alt="">
         </div>
       </div>  
-              <div class="col-6 d-flex  justify-content-center align-items-center">
+              <div class="col-12 col-md-12 col-lg-4 d-flex  justify-content-center align-items-center">
 
          <div class="m-4">
-          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.40 (3).jpeg" class="img-fluid vh-100" alt="">
+          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.40 (3).jpeg" class="img-fluid img-description"alt="">
         </div>
         </div>
-              <div class="col-6 d-flex  justify-content-center align-items-center">
+              <div class="col-12 col-md-12 col-lg-4 d-flex  justify-content-center align-items-center ">
 
          <div class="m-4">
-          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.40 (4).jpeg" class="img-fluid vh-100" alt="">
+          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.40 (4).jpeg" class="img-fluid img-description" alt="">
+        </div>   
+        </div>
+        <div class="col-12 col-md-12 col-lg-4 d-flex  justify-content-center align-items-center ">
+        <div class="m-4">
+          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.40.jpeg" class="img-fluid img-description" alt="">
         </div>
         </div>
-                      <div class="col-12 d-flex flex-column  justify-content-center align-items-center">
-
-                 <div class="m-4">
-          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.40.jpeg" class="img-fluid vh-100" alt="">
-        </div>
-                         <div class="m-4">
-          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.42.jpeg" class="img-fluid" alt="">
+        
+                      
+        <div class="col-12 d-flex flex-column  justify-content-center align-items-center">
+                         <div class="col-12 p-4">
+          <img src="img/naudir-251/WhatsApp Image 2024-01-30 at 12.12.42.jpeg" class="img-fluid img-description" alt="">
         </div>
 
       </div>
@@ -140,7 +143,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
