--- a/naudir-645.html
+++ b/naudir-645.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
-            Costa Delta
+          <h5 class="col-12 ps-5">
+            Naudir 645
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Lote:</strong> 645<br />
               <strong>_Barrio:</strong> El Naudir<br />
@@ -94,14 +94,14 @@
       </div>
     </div>
   </main>
-    <section class="ontainer-fluid  mt-5">
+    <section class="ontainer-fluid  mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-        <div class="m-4">
-          <img src="img/naudir-645/645 02.jpg" class="img-fluid" alt="">
+        <div class="col-12 p-4">
+          <img src="img/naudir-645/645 02.jpg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/naudir-645/645 03.jpg" class="img-fluid" alt="">
+         <div class="col-12 p-4">
+          <img src="img/naudir-645/645 03.jpg" class="img-fluid img-description" alt="">
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
