--- a/naudir-667.html
+++ b/naudir-667.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Naudir 667
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ms-4">
             <p class="technic-info">
               <strong>_Lote:</strong> 667<br />
               <strong>_Barrio:</strong> Naudir<br />
@@ -94,20 +94,20 @@
       </div>
     </div>
   </main>
-    <section class="ontainer-fluid  mt-5">
+    <section class="ontainer-fluid  mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-        <div class="m-4">
-          <img src="img/naudir-667/01.jpg" class="img-fluid" alt="">
+        <div class="col-12 p-4">
+          <img src="img/naudir-667/01.jpg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/naudir-667/03.jpg" class="img-fluid" alt="">
+         <div class="col-12 p-4">
+          <img src="img/naudir-667/03.jpg" class="img-fluid img-description" alt="">
         </div>
-         <div class="m-4">
-          <img src="img/naudir-667/04.jpg" class="img-fluid" alt="">
+         <div class="col-12 p-4">
+          <img src="img/naudir-667/04.jpg" class="img-fluid img-description" alt="">
         </div>
-                 <div class="m-4">
-          <img src="img/naudir-667/05.jpg" class="img-fluid" alt="">
+                 <div class="col-12 p-4">
+          <img src="img/naudir-667/05.jpg" class="img-fluid img-description" alt="">
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
