--- a/naudir-delta.html
+++ b/naudir-delta.html
@@ -77,11 +77,11 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Naudir Delta
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
-            <p class="technic-info">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
+            <p class="technic-info ">
               <strong>_Lote:</strong> House<br />
               <strong>_Barrio:</strong> Naudir Delta<br />
               <strong>_Localidad:</strong> Escobar<br />
@@ -94,7 +94,7 @@
       </div>
     </div>
   </main>
-    <section class="ontainer-fluid  mt-5">
+    <section class="container-fluid  mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
         <div class="m-4">
@@ -132,7 +132,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
