--- a/nizuc-16-m14.html
+++ b/nizuc-16-m14.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             Nizuc 16 M14
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Lote:</strong> 14 Manzana 16<br />
               <strong>_Barrio:</strong> Puerto Nizuc<br />
@@ -94,17 +94,17 @@
       </div>
     </div>
   </main>
-  <section class="container-fluid mt-5">
+  <section class="container-fluid mt-4">
     <div class="row g-5">          
       <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-        <div class="m-4">
-          <img src="img/nizuc-16-m14/14 nizuc-02.png" class="img-fluid" alt="">
+        <div class="col-12 p-4">
+          <img src="img/nizuc-16-m14/14 nizuc-02.png" class="img-fluid img-description" alt="">
         </div>
-          <div class="m-4">
-          <img src="img/nizuc-16-m14/14 nizuc-03.png" class="img-fluid" alt="">
+          <div class=" col-12 p-4">
+          <img src="img/nizuc-16-m14/14 nizuc-03.png" class="img-fluid img-description" alt="">
         </div>
-        <div class="m-4">
-          <img src="img/nizuc-16-m14/14 nizuc-04.png" class="img-fluid" alt="">
+        <div class="col-12 p-4">
+          <img src="img/nizuc-16-m14/14 nizuc-04.png" class="img-fluid img-description" alt="">
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
