--- a/puerto-parana.html
+++ b/puerto-parana.html
@@ -78,15 +78,15 @@
  
     </div>
   </main>
-   <section class="container-fluid px-0 mt-5">
+   <section class="container-fluid px-0 mt-4">
         <div class="row g-5">          
           <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-            <div class="m-4">
-              <img src="img/puerto-parana/WhatsApp Image 2024-01-30 at 14.55.00 (1).jpeg" class="img-fluid" alt="">
+            <div class="col-12 p-4">
+              <img src="img/puerto-parana/WhatsApp Image 2024-01-30 at 14.55.00 (1).jpeg" class="img-fluid img-description" alt="">
             </div>
           
-          <div class="m-4">
-            <img src="img/puerto-parana/WhatsApp Image 2024-01-30 at 14.55.00.jpeg" class="img-fluid" alt="">
+          <div class="col-12 p-4">
+            <img src="img/puerto-parana/WhatsApp Image 2024-01-30 at 14.55.00.jpeg" class="img-fluid img-description" alt="">
           </div>
         </div>
         </div>
@@ -108,7 +108,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
