--- a/san-sebastian.html
+++ b/san-sebastian.html
@@ -77,10 +77,10 @@
       </div>
       <div class="container-fluid">
         <div class="row g-5">
-          <h5 class="col-12">
+          <h5 class="col-12 ps-5">
             San Sebastian
           </h5>          
-          <div class="col-12 col-sm-6 col-lg-5 col-lx-4">
+          <div class="col-12 col-sm-6 col-lg-5 col-lx-4 ps-5">
             <p class="technic-info">
               <strong>_Lote:</strong> 214<br />
               <strong>_Barrio:</strong> San Sebastian<br />
@@ -94,11 +94,11 @@
       </div>
     </div>
   </main>
-  <section class=" container-fluid mt-5">
-    <div class="row g-4">          
+  <section class=" container-fluid mt-4">
+    <div class="row g-5">          
       <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-      <div class="m-4">
-        <img src="img/san-sebastian/01.jpg" class="img-fluid" alt="">
+      <div class="col-12 p-4">
+        <img src="img/san-sebastian/01.jpg" class="img-fluid w-100" alt="">
       </div>
        <div class="m-4">
         <img src="img/san-sebastian/03.jpg" class="img-fluid" alt="">
@@ -123,7 +123,7 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
